[package]
name = "netprobe"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Network diagnostic CLI - TCP/UDP probe with latency percentiles (p50/p95/p99), JSON/CSV output"
repository = "https://github.com/daviturnesv/netprobe"
authors = ["Davi Turnes <daviturnesv@users.noreply.github.com>"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
pnet = "0.35"
anyhow = "1.0"
humantime = "2.1"
indicatif = "0.17"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[[bin]]
name = "netprobe"
path = "src/main.rs"


